--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "^12.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0-beta.12"
